// Database schema diagram for Agent Tool backend
// Generated from backend/src/core/models.py
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id integer [primary key]
  email varchar(255) [unique, not null]
  name varchar(255) [not null]
  hashed_password varchar(255) [not null]
  is_active boolean [default: true, not null]
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
}

Table llm_config {
  id integer [primary key]
  user_id integer [note: 'Nullable - can be system-wide or user-specific']
  type varchar(50) [default: 'openai', not null, note: 'openai, gemini, ollama, groq, deepseek, openrouter']
  model varchar(200) [not null]
  api_key text [note: 'Encrypted or stored securely']
  base_url varchar(500) [note: 'For custom API endpoints']
  api_base varchar(500) [note: 'Alternative base URL field']
  active boolean [default: true, not null]
  is_default boolean [default: false, not null, note: 'True if using default DeepSeek LLM (100 requests/day limit)']
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
}

Table mcp_servers {
  id integer [primary key]
  user_id integer [not null]
  name varchar(100) [not null]
  url varchar(500) [not null]
  connection_type varchar(20) [default: 'http', not null, note: 'stdio, http, or sse']
  api_key text [note: 'Optional API key for the MCP server']
  headers text [note: 'Optional custom headers as JSON string']
  enabled boolean [default: true, not null]
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
  
  indexes {
    (user_id, name) [unique, name: 'uq_mcp_server_user_name']
  }
}

Table conversations {
  id integer [primary key]
  user_id integer [not null]
  session_id varchar(255) [not null]
  title varchar(500) [note: 'Auto-generated from first message']
  summary text [note: 'Summary of conversation (first 50 messages)']
  message_count integer [default: 0, not null, note: 'Total message count']
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
  
  indexes {
    (user_id, session_id) [unique, name: 'uq_conversation_user_session']
  }
}

Table messages {
  id integer [primary key]
  conversation_id integer [not null]
  role varchar(50) [not null, note: 'user, assistant, or system']
  content text [not null]
  tool_calls text [note: 'JSON string of tool calls']
  created_at timestamp [note: 'Timezone aware']
}

Table document_collections {
  id integer [primary key]
  user_id integer [not null]
  name varchar(255) [not null]
  description text
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
  
  indexes {
    (user_id, name) [unique, name: 'uq_collection_user_name']
  }
}

Table documents {
  id integer [primary key]
  user_id integer [not null]
  collection_id integer [note: 'Nullable - can belong to a collection']
  filename varchar(500) [not null]
  original_filename varchar(500) [not null]
  file_path varchar(1000) [not null, note: 'Path to stored file']
  file_type varchar(50) [not null, note: 'pdf, txt, docx, etc.']
  file_size integer [not null, note: 'Size in bytes']
  status varchar(50) [default: 'pending', not null, note: 'pending, processing, ready, error, needs_review']
  document_metadata text [note: 'JSON string for additional metadata']
  chunk_count integer [default: 0, not null]
  embedding_status varchar(50) [default: 'pending', not null, note: 'pending, processing, completed, failed']
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
}

Table document_chunks {
  id integer [primary key]
  document_id integer [not null]
  chunk_index integer [not null, note: 'Order of chunk in document']
  content text [not null]
  chunk_metadata text [note: 'JSON string for chunk metadata (page number, etc.)']
  embedding text [note: 'Base64 encoded embedding vector']
  created_at timestamp [note: 'Timezone aware']
}

Table custom_rag_tools {
  id integer [primary key]
  user_id integer [not null]
  name varchar(255) [not null, note: 'Tool name (e.g., retrieve_my_docs)']
  description text [not null, note: 'Tool description']
  collection_id integer [note: 'Nullable - links to a collection']
  enabled boolean [default: true, not null]
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
  
  indexes {
    (user_id, name) [unique, name: 'uq_custom_rag_tool_user_name']
  }
}

Table appointment_requests {
  id integer [primary key]
  user_id integer [note: 'Nullable for anonymous requests']
  name varchar(255) [not null]
  email varchar(255) [not null]
  phone varchar(50)
  request_type varchar(50) [default: 'appointment', not null, note: 'appointment, contact, or support']
  subject varchar(255)
  message text [not null]
  preferred_date timestamp [note: 'For appointments - timezone aware']
  preferred_time varchar(50) [note: 'e.g., morning, afternoon, evening, or specific time']
  status varchar(50) [default: 'pending', not null, note: 'pending, confirmed, cancelled, completed']
  notes text [note: 'Internal notes']
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
}

Table api_usage {
  id integer [primary key]
  user_id integer [note: 'Nullable for anonymous users']
  usage_date timestamp [not null, note: 'Date of usage (normalized to start of day) - timezone aware']
  request_count integer [default: 0, not null, note: 'Number of requests today']
  llm_provider varchar(50) [note: 'Which LLM provider was used (deepseek, openai, gemini, etc.)']
  llm_model varchar(100) [note: 'Which model was used']
  input_tokens integer [default: 0, not null, note: 'Total input tokens used']
  output_tokens integer [default: 0, not null, note: 'Total output tokens used']
  embedding_tokens integer [default: 0, not null, note: 'Embedding tokens (OpenAI)']
  mode varchar(20) [note: 'agent or rag']
  created_at timestamp [note: 'Timezone aware']
  updated_at timestamp [note: 'Timezone aware']
  
  indexes {
    (user_id, usage_date) [unique, name: 'uq_api_usage_user_date']
  }
}

Table api_requests {
  id integer [primary key]
  user_id integer [note: 'Nullable for anonymous users']
  request_timestamp timestamp [not null, note: 'Exact timestamp of the request - timezone aware']
  llm_provider varchar(50) [note: 'Which LLM provider was used']
  llm_model varchar(100) [note: 'Which model was used']
  input_tokens integer [default: 0, not null, note: 'Input tokens for this request']
  output_tokens integer [default: 0, not null, note: 'Output tokens for this request']
  embedding_tokens integer [default: 0, not null, note: 'Embedding tokens for this request']
  total_tokens integer [default: 0, not null, note: 'Total tokens for this request']
  mode varchar(20) [note: 'agent or rag']
  session_id varchar(255) [note: 'Session ID if available']
  success boolean [default: true, not null, note: 'Whether the request was successful']
  created_at timestamp [note: 'Timezone aware']
}

// Relationships

// Users relationships
Ref: users.id < llm_config.user_id [delete: CASCADE]
Ref: users.id < mcp_servers.user_id [delete: CASCADE]
Ref: users.id < conversations.user_id [delete: CASCADE]
Ref: users.id < document_collections.user_id [delete: CASCADE]
Ref: users.id < documents.user_id [delete: CASCADE]
Ref: users.id < custom_rag_tools.user_id [delete: CASCADE]
Ref: users.id < appointment_requests.user_id [delete: CASCADE]
Ref: users.id < api_usage.user_id [delete: CASCADE]
Ref: users.id < api_requests.user_id [delete: CASCADE]

// Conversation and Messages
Ref: conversations.id < messages.conversation_id [delete: CASCADE]

// Document relationships
Ref: document_collections.id < documents.collection_id [delete: SET NULL]
Ref: documents.id < document_chunks.document_id [delete: CASCADE]
Ref: document_collections.id < custom_rag_tools.collection_id [delete: SET NULL]


